Added a refresh button

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
         <p>Player 2</p>
         <img class="img2" src="images\dice6.png">
       </div>
-
+<!---Added a refresh button--->
     </div>
-
     <script src="index.js"></script>
+        <div class="container"> 
+      <p>
+        <button type="button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-refresh"></span> Click me Refresh
+        </button>
+      </p>  
+    </div>
   </body>
 
   <footer>
