--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <script src="index.js"></script>
         <div class="container"> 
       <p>
+        <a href="index.html>
         <button type="button" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-refresh"></span> Click me Refresh
-        </button>
+          </button></a>
       </p>  
     </div>
   </body>
