--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="index.js"></script>
         <div class="container"> 
       <p>
-        <a href="index.html">
+        <a href="/index.html">
         <button type="button" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-refresh"></span> Click me Refresh
           </button></a>
